# Guild-bot

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  data2.json  dockerfile  go.mod  go.sum  load-env.ps1  main.go  package-lock.json  package.json  readme.md  test.go  tsconfig.json  user.sql
.github/workflows/: deploy-image.yaml
cmd/: main.go
documentation/: .$er.drawio.bkp  er.drawio
internal/config/: config.go
internal/discord/: buttons.go  service.go
internal/handlers/: command.go  commands.go  fetch_users.go
internal/handlers/autocompletions/: guild_event.go  user.go
internal/handlers/commands/: fetch_guild_event.go  fetch_guild_events.go  fetch_user.go  fetch_users.go
internal/model/: event_data.go  fetchers.go  guild_event.go  user.go
internal/restclient/: client.go
internal/utils/: pagination.go  section.go
sql/: user.sql
src/: Bot.ts  Discord.ts  database.ts  index.ts  main.go  main.rs  register-commands.ts
src/@types/: commands.d.ts  skyblockProfile.d.ts
src/api/: user_api.rs
src/commands/: buttons.go  commands.go  createGuildEvent.go  ping.ts  register.ts  registerAccount.go  startGuildEvent.go
src/db/: GuildBot.go  create_table.sql  db.go  drop_tables.sql  users.sql
src/events/: GuildEvent.ts  GuildEventManager.ts  SlayerGuildEvent.ts
src/guildData/: GuildBot.go  guildEvent.go
src/guildEvent/: guildEvent.go
src/models/: user.go
src/utils/: GuildEvent.ts  GuildEventManager.ts  GuildUser.ts  hypixel-api.ts  hypixelapi.go  respondWithError.go  todo.ts  utilsFunction.ts
(+2 files in other folders)
