[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "http", "model", "rustls_backend"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
async-trait = "0.1"
serde = { version = "1.0.104", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
poise = "0.6.1"
num-format = "0.4.4"
separator = "0.4"
once_cell = "1.21.3"
